@@ -2,11 +2,11 @@ Encoding: UTF-8
 Package: HDclassif
 Type: Package
 Title: High Dimensional Supervised Classification and Clustering
-Version: 2.2.0
+Version: 2.2.1
 Depends: grDevices, utils, graphics, stats, MASS
 Imports: rARPACK
 Author: Laurent Berge, Charles Bouveyron and Stephane Girard
-Maintainer: Laurent Berge <laurent.berge@uni.lu>
+Maintainer: Laurent Berge <laurent.berge@u-bordeaux.fr>
 Description: Discriminant analysis and data clustering methods for high
     dimensional data, based on the assumption that high-dimensional data live in
     different subspaces with low dimensionality proposing a new parametrization of
@@ -15,8 +15,8 @@ Description: Discriminant analysis and data clustering methods for high
 License: GPL-2
 LazyLoad: yes
 ZipData: no
-RoxygenNote: 6.1.1
+RoxygenNote: 7.2.3
 NeedsCompilation: no
-Packaged: 2019-11-19 15:38:22 UTC; laurent.berge
+Packaged: 2023-08-22 14:05:28 UTC; lrberge
 Repository: CRAN
-Date/Publication: 2019-11-19 18:20:06 UTC
+Date/Publication: 2023-08-23 07:50:02 UTC
