@@ -1,31 +1,33 @@
 869b6ac2640e622cf5e7ea21f7ced345 *ChangeLog
-85912265bd1e576b1fab39de3bbcbcf8 *DESCRIPTION
+8cd3efbff28959e5e215fb642a7ea2c1 *DESCRIPTION
 e124174424f972d03e974ae7453068c2 *NAMESPACE
-3f3eac0d60be8ba3bf99a788ed70005b *R/controls.R
+839b5a7a78edd003e5d8fdb141071344 *R/controls.R
 d85deee70e2036ad61d5807ad06a5c7b *R/demo.R
-e9ce4dc3d629c47901e851edecdda304 *R/hdc.R
-0cfaad197f01731bbd78142b3d05839c *R/hdda.R
-9f64b80acbf4b9d06e6e2483c7d1211d *R/hddc.R
+88055f22ab51da8ad4e13ad7074811d5 *R/hdc.R
+efacfedec75336a11c886fc90aea77c3 *R/hdda.R
+fc4145db69ceecf75b46cffe163f91bb *R/hddc.R
 9a46e4715d23ff6ea3bea2549d58f941 *R/mdaHD.R
 b239fecc91471f24c44c5257d93c8ea6 *R/onLoad.R
+f00e30591c09eb07e14e193d44e826b0 *README.md
+cb4924f3573383fca290a0a8e2ca5294 *build/partial.rdb
 c6f12c19faff9c2f80afe55639b3d4a3 *data/Crabs.rda
 ffb2a0e027b07b73f6feb3752c468e7e *data/wine.rda
 3c3e15c7421bd085435d6a0bc4569d31 *demo/00Index
 7d404fac61e6eb3aa13a0edbd6071316 *demo/HDclassif.r
 d6af4b7893f3472548a3691c37dc3379 *demo/hdda.r
 ce8ee72079d08babe1dfc1df117d50fa *demo/hddc.r
-6117ba2f42210b3a3a6dce469e83c036 *inst/CITATION
-6457ac12f55bde9e1abc87a2ffe11782 *inst/NEWS.Rd
+0ab2003adec2c61eb082e47a5cc22dd2 *inst/CITATION
+a24c51116bfbf29d0b6e1b3e47570426 *inst/NEWS.Rd
 24da942a411d639f8210c273aaa1df67 *man/Crabs.Rd
-d14fc760f0a7ed174019f23989ace69a *man/HDclassif-package.Rd
+83673da79a63a7229997573cabc0d580 *man/HDclassif-package.Rd
 1bc3f0aebc9b4b3cf5d73a081e1af762 *man/demo_hddc.Rd
-ae3af7495c16ffc22476e7722d98dc29 *man/hdda.Rd
-83f6df3c60ee32ba934d50c824058ef5 *man/hddc.Rd
-0d7cda29655826ca5181770e3e3d5f67 *man/hdmda.Rd
-1aaeefe75f517de6e011e30e4983a86b *man/plot.hdc.Rd
-b4528d08194ebf10e1b3498f2696760a *man/predict.hdc.Rd
-bf429d075496bfe1286cbb902509631a *man/predict.hdmda.Rd
-da7579259d8a51c4c7ceca244973161d *man/setHDclassif.show.Rd
+615d88e025226286fe13ef78ba95be6a *man/hdda.Rd
+5eff5e3da1fab5354bdacc17157c08fa *man/hddc.Rd
+ec3c47440f93c064f070cd83520a5217 *man/hdmda.Rd
+d7eb61218c3c40f09e01d1b59a94ab5f *man/plot.hdc.Rd
+9e7af37d33aaf3b1ec841b3cc73de257 *man/predict.hdc.Rd
+bfefe659c8962513ca42acc0365e948a *man/predict.hdmda.Rd
+57d08508d26334d3ebd20f54316146c1 *man/setHDclassif.show.Rd
 47286d48377f9d88d590e3b69e6a56a2 *man/simuldata.Rd
 8c09ac2bcf479ac18400c2a2076be294 *man/slopeHeuristic.Rd
 b2bf685ffe076ab33170d607582e83ef *man/wine.Rd
