@@ -1,13 +1,17 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/hdc.R
+\docType{data}
 \name{setHDclassif.show}
 \alias{setHDclassif.show}
 \alias{getHDclassif.show}
 \title{Sets/gets the default 'show' argument in HDDC and HDDA}
+\format{
+An object of class \code{function} of length 1.
+}
 \usage{
 setHDclassif.show(show)
 
-getHDclassif.show()
+getHDclassif.show
 }
 \arguments{
 \item{show}{Single logical with default. Will specify the default value of the \code{show} argument in HDDA and HDDC.}
@@ -40,3 +44,4 @@ setHDclassif.show(FALSE)
 
 
 }
+\keyword{datasets}
